项目搭建完成

--- a/src/views/main/index.less
+++ b/src/views/main/index.less
@@ -1,1 +1,62 @@
+.el-menu-vertical-demo:not(.el-menu--collapse) {
+  width: 200px;
+  min-height: 400px;
+}
 
+.main-box {
+  height: 100%;
+  width: 100%;
+}
+
+.scrollerbar {
+  height: calc(100% - 60px);
+}
+.el-scrollbar__wrap{
+  overflow:hidden ;
+}
+
+.el-header {
+  background-color: #B3C0D1;
+  color: #333;
+  text-align: center;
+  line-height: 60px;
+}
+
+.title-wrapper {
+  line-height: 60px;
+  background-color: #B3C0D1;
+}
+.title-wrapper img{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin: 0 8px 0 10px;
+}
+
+.el-aside {
+  background-color: #fff;
+  color: #444;
+  width: auto;
+  overflow: hidden;
+  /*text-align: center;*/
+  /*line-height: 200px;*/
+}
+
+.el-main {
+  background-color: #E9EEF3;
+  color: #444;
+  padding: 0;
+  overflow: hidden;
+}
+.main-body{
+  background-color: #ffffff;
+  height: 100%;
+  margin: 10px 0 0 10px;
+  padding: 20px 0 0 0 ;
+}
+
+.el-container {
+  height: 100%;
+
+}
